# StrategyPlanner

./: .env  .env.example  Dockerfile  README.md  docker-compose.yml  main.py  requirements.txt  run.py  start.sh  strategy_config.json
backend/: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt
backend/app/: __init__.py  main.py
backend/app/adapters/: __init__.py  qh_adapter.py
backend/app/config/: __init__.py  contracts.yaml  settings.py  strategy_settings.yaml
backend/app/contracts/: __init__.py  engine_output.py  execution_inputs.py  external_api.py  macro_inputs.py  market_data.py
backend/app/core/: __init__.py  container.py  dependencies.py  exceptions.py  logging.py
backend/app/routes/: __init__.py  account.py  health.py  market_data.py  pages.py  regime.py  strategy.py
backend/app/services/: __init__.py  contract_registry.py  data_provider.py  indicator_engine.py  regime_engine.py  risk_engine.py  strategy_engine.py
backend/app/static/css/: main.css
backend/app/static/js/: api.js  charts.js  dashboard.js  replay.js  risk.js  strategy.js  utils.js  websocket.js
backend/app/strategies/: __init__.py  definitions.py
backend/app/templates/layouts/: base.html  (+3 more)
backend/app/tests/: conftest.py  test_benchmark.py  test_edge_cases.py  test_indicators.py  test_regime.py  test_risk.py  test_utils.py
backend/app/utils/: __init__.py  datetime_helpers.py  math_helpers.py  spread_helpers.py  validation_helpers.py
backend/tests/: __init__.py  test_indicators.py  test_risk.py  test_strategies.py
(+148 files in other folders)
